--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <ul>
-      <li><a href="hello-jq.html">Hello(jQuery)</a></li>
-      <li><a href="hello-aj.html">Hello(angularjs)</a></li>
+      <li><a href="hello-jq.jspx">Hello(jQuery)</a></li>
+      <li><a href="hello-aj.jspx">Hello(angularjs)</a></li>
       <li><a href="s/Hello">Hello</a></li>
       <li><a href="s/greeting">greeting</a></li>
     </ul>
